<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>compare</groupId>
	<artifactId>compare</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<properties>
		<guava.version>18.0</guava.version>
		<logback.version>1.1.3</logback.version>
		<spring.version>4.1.6.RELEASE</spring.version>
		<spring.rabbit.version>1.4.4.RELEASE</spring.rabbit.version>
		<slf4j.version>1.7.12</slf4j.version>
		<commons.lang.version>3.4</commons.lang.version>
		<mybatis.version>3.2.8</mybatis.version>
		<spring.mybatis.version>1.2.2</spring.mybatis.version>
		<mysql.version>5.1.35</mysql.version>
		<maven.resources.version>2.4.3</maven.resources.version>
		<maven.compiler.version>2.3.2</maven.compiler.version>
		<maven.surefire.version>2.7.2</maven.surefire.version>
		<maven-assembly.version>2.3</maven-assembly.version>
		<maven.plugsins.version>3.3.3</maven.plugsins.version>
		<java.version>1.8</java.version>
		<config.encoding>UTF-8</config.encoding>
		<spring.redis.version>1.5.0.RELEASE</spring.redis.version>
		<jedis.version>2.7.0</jedis.version>
		<spring.web.version>3.2.0.RELEASE</spring.web.version>
		<activemq.version>5.7.0</activemq.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons.lang.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.version}</version>
				<configuration>
					<encoding>${config.encoding}</encoding>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=1024m
						-Dfile.encoding=UTF-8</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>